--- a/src/timeline/timeline.css
+++ b/src/timeline/timeline.css
@@ -51,6 +51,13 @@
   padding: 0;
 }
 
+.timeline-year-events-no-events {
+  color: #777;
+  font-size: 200%;
+  padding: 10px;
+  width: 100%;
+}
+
 @media screen and (max-width: 450px) {
   .timeline-year {
     align-items: center;
@@ -72,5 +79,9 @@
     display: block;
     padding: 0;
     width: 100%;
+  }
+
+  .timeline-year-events-no-events {
+    text-align: center;
   }
 }
